--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <div class="container">
 
-    <header>
+<header>
         <img src="Assets/images/logo.svg" alt="" id="header_logo">
         <div class="navbar">
             <a href="#" class="navbar_item nav_link">Home</a>
@@ -21,14 +21,30 @@
         </div>
         <div class="right_nav">
             <a href="#" class="navbar_item" id="lets_talk">Lets Talk</a>
-            <div id="dropdown_menu" class="navbar_item dropdown_menu">||</div>
+            <div id="dropdown_menu" class="navbar_item dropdown_menu"><div class="dropdown_lines"></div></div>
         </div>
-    </header>
-    <main>
+</header>
+<main>
+    <section class="section1">
         <div class="main_title">
-            <h1 class="main_title1">Creative Designer</h1>
+            <h1 class="main_title1">Creative designer</h1>
+            <img src="Assets/images/oval_icons (1).png" class="oval_icon1 oval_icons"></img><h1 class="main_title2">and Developer</h1><img src="Assets/images/oval_icons (2).png" class="oval_icon2 oval_icons"></img>
+            <h1 class="main_title3">Specializing in Wordpress</h1>
+
+            <img src="Assets/images/circle.png" alt="" class="circle_graphic">
+            <img src="Assets/images/Iphone mockup.png" alt="iPhone Mockup" id="section1_img">
         </div>
-    </main>
+    </section>
+    <section class="section2">
+        <div class="title2">
+            <h2 class="title2_about">About</h2>
+            <h2 class="title2_kodelab">kodelab</h2>
+        </div>
+        <p class="section2_p">
+            We are a collection of creative designers and developers working together to present superior digital service and building digital products from the ground up.
+        </p>
+    </section>
+</main>
 
 
 
