--- a/index.html
+++ b/index.html
@@ -43,6 +43,36 @@
         <p class="section2_p">
             We are a collection of creative designers and developers working together to present superior digital service and building digital products from the ground up.
         </p>
+        <div class="horizontal_divider"></div>
+        <div class="features">
+            <div class="feature1">
+                <h2 class="3features_numbers">01</h2>
+                <h4 class="3features_h4">Website design process</h4>
+                <p class="features_p">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+                <img src="Assets/images/Box Graphic-kodelab.png" alt="" class="wierd_cube">
+            </div>
+           <div class="vertical_divider"></div>
+            <div class="feature2">
+                <h2 class="3features_numbers">02</h2>
+                <h4 class="3features_h4">Website design process</h4>
+                <p class="features_p">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+                <img src="Assets/images/Box Graphic-kodelab.png" alt="" class="wierd_cube">
+            </div>
+            <div class="vertical_divider"></div>
+            <div class="feature3">
+                <h2 class="3features_numbers">03</h2>
+                <h4 class="3features_h4">Website design process</h4>
+                <p class="features_p">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+                <img src="Assets/images/Box Graphic-kodelab.png" alt="" class="wierd_cube">
+            </div>
+        </div>
+        <div class="horizontal_divider"></div>
+    </section>
+    <section class="section3">
+        <h2 class="section3_h">
+            <span class="section3_h--our">Our</span>
+            Services
+        </h2>
     </section>
 </main>
 
