--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
             <span class="section3_h--our">Our</span>
             Services
         </h2>
+        <div class="service" id="service1">
+            <h3 class="service_names">Product Design</h3>
+            <p class="service_p" id="service_p1">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+            <img src="Assets/images/Gray Cube-kodelab.png" alt="" class="service_img">
+        </div>
+        <div class="service" id="service2">
+            <img src="Assets/images/Vektor people-kodelab.png" alt="" class="service_img">
+            <h3 class="service_names">Branding</h3>
+            <p class="service_p" id="service_p2">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+        </div>
+        <div class="service" id="service3">   
+            <h3 class="service_names">Web Development</h3>
+            <p class="service_p" id="service_p3">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
+            <img src="Assets/images/Gray Cube-kodelab.png" alt="" class="service_img">
+        </div>
     </section>
 </main>
 
