--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <img src="Assets/images/Box Graphic-kodelab.png" alt="" class="wierd_cube">
             </div>
         </div>
-        <div class="horizontal_divider"></div>
+        <div class="horizontal_divider" id="horizontal_divider2"></div>
     </section>
     <section class="section3">
         <h2 class="section3_h">
@@ -88,6 +88,15 @@
             <p class="service_p" id="service_p3">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua. Amet porttitor morbi non arcu. Non consectetur erat lectus urna duis covallis</p>
             <img src="Assets/images/Gray Cube-kodelab.png" alt="" class="service_img">
         </div>
+    </section>
+
+    <section class="section4">
+        <div id="section4_lefttext">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
+        </div>
+        <h2 id="section4_heading">Full service studio for startups and businesses with experience</h2>
+
     </section>
 </main>
 
