--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" class="navbar_item nav_link">Resources</a>
         </div>
         <div class="right_nav">
-            <a href="#" class="navbar_item" id="lets_talk">Lets Talk</a>
+            <a href="#" class="navbar_item lets_talk" >Lets Talk</a>
             <div id="dropdown_menu" class="navbar_item dropdown_menu"><div class="dropdown_lines"></div></div>
         </div>
 </header>
@@ -96,7 +96,22 @@
             <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
         </div>
         <h2 id="section4_heading">Full service studio for startups and businesses with experience</h2>
+    </section>
+    <div id="tape"><span>Selected projects <img src="Assets/images/arrow icon-kodelab.png" alt=""> Selecte</span></div>
 
+    <section class="section5">
+        <span id="section5_example">
+        <img src="Assets/images/computer img.png" alt="" id="section5_mockup">
+        <div id="section5_mockup-description">
+            <h3>Coinbic website design</h3>
+            <p>Lorem ipsum dolor sit amet, dolore et dolore magna aliqua. Amet portti dolor morbi non arcu. Non consectetur nam at lectus urna duis covallis</p>
+            <a href="#" class="button_style">Lets Talk</a>
+            <a href="#" class="button_style">Lets Talk</a>
+            <a href="#" class="button_style">Lets Talk</a>
+
+            <a href="#" class="button_style" id="section5_largebutton">Lets Talk</a>
+        </div>
+        </span>
     </section>
 </main>
 
