--- a/index.html
+++ b/index.html
@@ -112,7 +112,42 @@
             <a href="#" class="button_style" id="section5_largebutton">Lets Talk</a>
         </div>
         </span>
+
+        <div id="portfolio">
+            <div class="portfolio_item">
+                <img src="Assets/images/placeholder dark.png" alt="" class="portfolio_item">
+                <h3>Coinbic website design</h3>
+                <a href="#">View case</a>
+            </div>
+            <div class="portfolio_item">
+                <img src="Assets/images/placeholder phone mockup.png" alt="" class="portfolio_item">
+                <h3>Coinbic website design</h3>
+                <a href="#">View case</a>
+            </div>
+            <div class="portfolio_item">
+                <img src="Assets/images/placeholder dark.png" alt="" class="portfolio_item">
+                <h3>Coinbic website design</h3>
+                <a href="#">View case</a>
+            </div>
+            <div class="portfolio_item">
+                <img src="Assets/images/placeholder phone mockup.png" alt="" class="portfolio_item">
+                <h3>Coinbic website design</h3>
+                <a href="#">View case</a>
+            </div>
+        </div>
     </section>
+
+    <a href="#" id="view_more">View more</a>
+
+    <section class="section6">
+        <img src="Assets/images/Vektor people-kodelab.png" alt="">
+        <span>
+        <h2>Full service studio for startups and businesses goals</h2>
+        <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
+        </span>
+    </section>
+
+
 </main>
 
 
