--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Kodelab</title>
+
 </head>
 <body>
+
     
 <div class="container">
 
 <header>
         <img src="Assets/images/logo.svg" alt="" id="header_logo">
         <div class="navbar">
-            <a href="#" class="navbar_item nav_link">Home</a>
+            <a href="#" class="navbar_item nav_link animate__animated animate__bounce">Home</a>
             <a href="#" class="navbar_item nav_link">Cases</a>
             <a href="#" class="navbar_item nav_link">About Us</a>
             <a href="#" class="navbar_item nav_link">Resources</a>
@@ -145,6 +146,23 @@
         <h2>Full service studio for startups and businesses goals</h2>
         <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
         </span>
+    </section>
+
+    <section class="section7">
+        <h2 id="section7_heading1">Full service studio for startups and businesses goals</h2>
+        <p id="section7_p1">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
+        <img src="Assets/images/Globe vektor.png" alt="" id="section7_globeimg">
+        <h3 id="section7_headingsmall">About us</h3>
+        <h2 id="section7_heading2">Full service studio for startups and businesses goals</h2>
+        <p id="section7_p2">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
+        <div class="horizontal_divider" id="horizontal_divider_s7"></div>
+        <img src="Assets/images/Box Graphic-kodelab.png" alt="" id="section7_img2">
+        <div id="box_of_stats_s7">
+            <div class="stat"><h3>5.4</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
+            <div class="stat"><h3>300</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
+            <div class="stat"><h3>50+</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
+            <div class="stat"><h3>4M</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
+        </div>
     </section>
 
 
