--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     </section>
 
     <section class="section7">
+    <span class="container_white_s7">
         <h2 id="section7_heading1">Full service studio for startups and businesses goals</h2>
         <p id="section7_p1">Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p>
         <img src="Assets/images/Globe vektor.png" alt="" id="section7_globeimg">
@@ -163,10 +164,13 @@
             <div class="stat"><h3>50+</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
             <div class="stat"><h3>4M</h3> <p>Lorem ipsum dolor sit, consectetur elit, sed do eiusmod tempor incididunt dolore magna aliqua.</p> </div>
         </div>
+    </span>
     </section>
+   
 
 
 </main>
+<div class="extra_space"></div>
 
 
 
